--- a/exercicio-tabelas.html
+++ b/exercicio-tabelas.html
@@ -118,7 +118,7 @@
                 <table id="ex2">
                     <tbody>
                         <tr>
-                            <td colspan="2">TOPO</td>
+                            <td colspan="2">topo</td>
                         </tr>
                         <tr style="height: 200px">
                             <td style="width: 80px">MENU</td>
