aulas CSS: positions, float, display, demais propriedades. + criação de layouts.

--- a/tabelas.html
+++ b/tabelas.html
@@ -27,6 +27,15 @@
             td {
                 text-align: center;
             }
+
+            tr:nth-child(even),
+            thead tr {
+                background-color: #ccc;
+            }
+
+            tr:hover {
+                background-color: #ddd;
+            }
         </style>
     </head>
     <body>
@@ -80,6 +89,34 @@
                     <tr>
                         <td>16</td>
                         <td>Marcelo</td>
+                        <td colspan="2">10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>16</td>
+                        <td>Marcelo</td>
+                        <td>16</td>
+                        <td colspan="2">10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>16</td>
+                        <td>Marcelo</td>
+                        <td>16</td>
+                        <td colspan="2">10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>16</td>
+                        <td>Marcelo</td>
+                        <td>16</td>
+                        <td colspan="2">10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>16</td>
+                        <td>Marcelo</td>
+                        <td>16</td>
                         <td colspan="2">10</td>
                         <td>10</td>
                     </tr>
